<resources>
    <string name="app_name">SocialGen-App</string>
    <string name="title_home">ホーム</string>
    <string name="title_reinforcement">強化</string>
    <string name="title_ranking">ランキング</string>
    <string name="money_unit">pt</string>
    <string name="money_possession">所持ポイント</string>
    <string name="anti_covid19_point_today">今日のポイント</string>
    <string name="anti_covid19_point_unit">pt</string>
    <string name="user_total_point">全国の合計</string>
    <string name="retry">再試行</string>
    <string name="load_failed_message">データの取得に失敗しました</string>
    <string name="user_id">ID:</string>
    <string name="point_unit">pt</string>
    <string name="rank_unit">位</string>
    <string name="attackPower">攻撃力</string>
    <string name="attackSpeed">攻撃速度</string>
    <string name="hitPoint">体力</string>
    <string name="spread">弾の拡散</string>
    <string name="speed">移動速度</string>
    <string name="Level">Lv.</string>
    <string name="to_next_level_point_1">次のレベルまで</string>
    <string name="to_next_level_point_2">pt必要</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="hand_wash">手洗いをしましたか？</string>
    <string name="wear_mask">マスクは着用しましたか？</string>
    <string name="ventilation">換気はしましたか？</string>
    <string name="social_distance">ソーシャルディスタンスを<br/>保ちましたか？</string>
    <string name="game_view_content_description">Game view</string>
</resources>